fixed bug where non dark mode styles were flashing on page load when dark mode was enabled

--- a/css/index.css
+++ b/css/index.css
@@ -154,6 +154,9 @@ a {
 label {
   font-family: 'Open Sans', sans-serif;
 }
+body {
+  visibility: hidden;
+}
 .container {
   max-width: 800px;
   width: 100%;
