--- a/less/global.less
+++ b/less/global.less
@@ -32,6 +32,11 @@ a {
 label {
     font-family: 'Open Sans', sans-serif;
 }
+
+body {
+  visibility: hidden;
+}
+
 .container {
     max-width: 800px;
     width: 100%;
